--- a/app/src/main/res/layout-v21/layout_game_list.xml
+++ b/app/src/main/res/layout-v21/layout_game_list.xml
@@ -27,23 +27,22 @@
         <androidx.appcompat.widget.AppCompatRatingBar
             android:id="@+id/ratingGame"
             style="?android:attr/ratingBarStyleIndicator"
-            android:layout_width="128dp"
+            android:layout_width="131dp"
             android:layout_height="36dp"
             android:isIndicator="false"
             android:numStars="5"
             android:rating="4.5"
-            android:scaleX="0.7"
-            android:scaleY="0.7"
+            android:scaleX="0.4"
+            android:scaleY="0.4"
             android:stepSize="0.5"
             android:transformPivotX="0dp"
             android:transformPivotY="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.059"
+            app:layout_constraintHorizontal_bias="0.06"
             app:layout_constraintStart_toStartOf="@+id/image"
             app:layout_constraintTop_toBottomOf="@+id/image"
-            app:layout_constraintVertical_bias="0.812">
-        </androidx.appcompat.widget.AppCompatRatingBar>
+            app:layout_constraintVertical_bias="0.984"></androidx.appcompat.widget.AppCompatRatingBar>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonDetails"
@@ -56,6 +55,34 @@
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/game_name"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/ratingGame"
+            app:layout_constraintEnd_toStartOf="@+id/buttonDetails"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/ratingGame"
+            app:layout_constraintTop_toTopOf="@+id/image"
+            app:layout_constraintVertical_bias="0.632"></androidx.appcompat.widget.AppCompatTextView>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/console"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/ratingGame"
+            app:layout_constraintEnd_toEndOf="@+id/textView"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/image"
+            app:layout_constraintVertical_bias="0.909" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
