--- a/app/src/main/res/layout-v21/layout_game_list.xml
+++ b/app/src/main/res/layout-v21/layout_game_list.xml
@@ -13,28 +13,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/image"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:src="@drawable/street"
-        android:scaleType="centerCrop"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-    </androidx.appcompat.widget.AppCompatImageView>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/street"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageView>
 
         <androidx.appcompat.widget.AppCompatRatingBar
             android:id="@+id/ratingGame"
             style="?android:attr/ratingBarStyleIndicator"
-            android:layout_width="131dp"
-            android:layout_height="36dp"
+            android:layout_width="182dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:isIndicator="false"
-            android:numStars="5"
-            android:rating="4.5"
-            android:scaleX="0.4"
-            android:scaleY="0.4"
-            android:stepSize="0.5"
+            android:numStars="2"
+            android:rating="3.5"
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            android:stepSize="0.8"
             android:transformPivotX="0dp"
             android:transformPivotY="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -42,7 +44,8 @@
             app:layout_constraintHorizontal_bias="0.06"
             app:layout_constraintStart_toStartOf="@+id/image"
             app:layout_constraintTop_toBottomOf="@+id/image"
-            app:layout_constraintVertical_bias="0.984"></androidx.appcompat.widget.AppCompatRatingBar>
+            app:layout_constraintVertical_bias="0.984">
+        </androidx.appcompat.widget.AppCompatRatingBar>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonDetails"
@@ -69,7 +72,8 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/ratingGame"
             app:layout_constraintTop_toTopOf="@+id/image"
-            app:layout_constraintVertical_bias="0.632"></androidx.appcompat.widget.AppCompatTextView>
+            app:layout_constraintVertical_bias="0.632">
+        </androidx.appcompat.widget.AppCompatTextView>
 
         <TextView
             android:id="@+id/textView2"
